2002-03-28  Martin Weber <martweb@gmx.net>

	* output-emf.c: rewritten with Allen Barnett.
	
2002-03-28  Masatake YAMATO  <yamato@redhat.com>

	* HACKING (Tool for debugging output):
	Write about viewers.

2002-03-28  Martin Weber <martweb@gmx.net>

	* despeckle.c: despeckle now also works on gray
	scale images.

2002-03-20  Martin Weber <martweb@gmx.net>

	* main.c (main): Moved dumping of the bitmap so that quantize 
	and despeckle are also in effect.

	Message-ID: <3C9A4462.47488039@gmx.net>.

2002-03-24  Ian MacPhedran <Ian_MacPhedran@engr.USask.Ca>

	* output-fig.c (out_fig_splines): Added a new 
	local variable, fig_spline_close.

2002-03-20  Martin Weber <martweb@gmx.net>

	* output-emf.c (GetEmfStats, GetEmfStats): 
	Number of records was not counted correctly.

	Message-ID: <15225.1016698302@www11.gmx.net>.

2002-03-21  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am (libautotrace_a_SOURCES): Added
	strgicmp.c. This function must be in libautotrace.a
	because input.c uses.

2002-03-20  Martin Weber <martweb@gmx.net>

	* README updated.
	
	* TODO: New file.

2002-03-20  Martin Weber <martweb@gmx.net>

	* output-emf.c: Don't include output.h.

	Message-ID: <24692.1016622657@www46.gmx.net>.
	
2002-03-20  Masatake YAMATO  <yamato@redhat.com>

	* NEWS: Updated.
	
	* configure.in: Create a pre release(0.30pre1).
	
2002-03-20  Martin Weber <martweb@gmx.net>

	* output-emf.c: Include output.h.
	Fixed bug when boundaries of the splines were larger than the
	boundaries of the bitmap.
	* output-cgm.c: removed FLOAT_TO_UI16.
	
	Message-ID: <3C97B972.12D92E49@gmx.net>.

2002-03-20  Masatake YAMATO  <yamato@redhat.com>

	* NEWS: Updated for 0.30.

	* autotrace.h: Added comments for at_splines_new.

2002-03-20  Martin Weber <martweb@gmx.net>

	* fit.c (fitted_splines::total): Removed.
	(*): Remove `_'(underscore) from variable 
	names to avoid conflicting with function
	name. Initialized local variables to 
	avoid compiler warnings.
	