@@ -51,6 +51,8 @@ Here the options you can use in the command:
       corner; default is 100.
     despeckle-level <unsigned>: 0..20; default is no despeckling.
     despeckle-tightness <real>: 0.0..8.0; default is 2.0.
+    dpi <unsigned>: The dots per inch value in the input image, affects scaling
+      of mif output image
     error-threshold <real>: subdivide fitted curves that are off by
       more pixels than this; default is 2.0.
     filter-iterations <unsigned>: smooth the curve this many times
@@ -74,6 +76,8 @@ Here the options you can use in the command:
     tangent-surround <unsigned>: number of points on either side of a
       point to consider when computing the tangent at that point; default is 3.
     report-progress: report tracing status in real time.
+    debug-arch: print the type of cpu.
+    debug-bitmap: dump loaded bitmap to <input_name>.bitmap.
     version: print the version number of this program.
 
 The library is named libautotrace. About usage of the library, 
