@@ -42,8 +42,7 @@ static struct output_format_entry output_formats[] = {
     {"emf",     "Enhanced Metafile format",     output_emf_writer},
     {"mif",     "FrameMaker MIF format",        output_mif_writer},
     {"er",      "Elastic Reality Shape file",   output_er_writer},
-    {"dxf12",   "DXF format (without splines)", output_dxf12_writer},
-    {"dxf",     "default DXF format",           output_dxf12_writer},
+    {"dxf",     "DXF format (without splines)", output_dxf12_writer},
     {"epd",     "EPD format",                   output_epd_writer},
     {"pdf",     "PDF format",                   output_pdf_writer},
     {"cgm",     "Computer Graphics Metafile",   output_cgm_writer},
